@@ -218,9 +218,6 @@ class AXScriptException(COMException):
             line = None
         return filename, lineno, name, line
 
-    def __repr__(self):
-        return "AXScriptException Object with description:" + self.description
-
 
 def ProcessAXScriptException(
     scriptingSite: AXSite,
