@@ -16,6 +16,11 @@ Coming in build 311, as yet unreleased
 * Fixed a regression that broke special __dunder__ methods with CoClass. (#1870, #2493, @Avasam, @geppi)
 * Fixed a memory leak when SafeArrays are used as out parameters (@the-snork)
 * Fixed dispatch handling for properties (@the-snork)
+* The following classes now produce a valid `eval` string representation when calling `repr`: (#2573, @Avasam)
+  * `pywin.tools.browser.HLIPythonObject`
+  * `win32com.server.exception.COMException`
+  * `win32comext.axscript.client.error.AXScriptException`
+  * `win32comext.axscript.client.pyscript.NamedScriptAttribute`
 
 Build 310, released 2025/03/16
 ------------------------------
